# pulumi-kubernetes-ingress-nginx

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser-prerelease.yml  .goreleaser.prerelease.yml  .goreleaser.yml  CHANGELOG.md  Makefile  README.md  kind.config.yml  schema.json
.github/workflows/: build.yml  ci.yml  command-dispatch.yml  comment-on-stale-issues.yml  lint.yml  prerelease.yml  pull-request.yml  release.yml  run-acceptance-tests.yml  weekly-pulumi-update.yml
examples/: examples_go_test.go  examples_py_test.go  examples_ts_test.go  go.mod  go.sum
examples/simple-nginx-dotnet/: Program.cs  Pulumi.yaml  simple-nginx-dotnet.csproj
examples/simple-nginx-go/: Pulumi.yaml  README.md  go.mod  go.sum  main.go
examples/simple-nginx-py/: Pulumi.yaml  __main__.py  requirements.txt
examples/simple-nginx-ts/: Pulumi.yaml  index.ts  package.json
provider/: go.mod  go.sum
provider/cmd/pulumi-resource-chart-ingress-nginx/: main.go
provider/pkg/provider/: chart.go  (+1 more)
sdk/: go.mod  go.sum
sdk/dotnet/: IngressController.cs  Provider.cs  Pulumi.KubernetesIngressNginx.csproj  Utilities.cs
sdk/java/: README.md  settings.gradle
sdk/nodejs/: index.ts  index.ts.bak  ingressController.ts  ingressController.ts.bak  package.json  provider.ts  provider.ts.bak  tsconfig.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_chart_ingress_nginx/: __init__.py  _inputs.py  ingress_controller.py  provider.py
sdk/python/pulumi_kubernetes_ingress_nginx/: README.md  __init__.py  _inputs.py  ingress_controller.py  outputs.py  provider.py
(+118 files in other folders)
